<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.chat.ChatFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon_back_contentdescription"
            android:paddingHorizontal="16dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_gravity="center"
            android:text="Bienvenido/a"
            android:textColor="@color/message_other_color"
            tools:text="Bienvenido/a"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/ivCloseSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="8dp"
            android:contentDescription="@string/accessibility_closeSession"
            android:src="@drawable/baseline_close_24" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerTop"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMsg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/accessibility_rv"
        app:layout_constraintBottom_toTopOf="@id/dividerBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerTop" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerBottom"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintBottom_toTopOf="@id/chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/chat"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/etChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/send_message_hint"
            android:textColorHint="@color/message_other_color"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/send_string" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>